add navigation component

--- a/angular-test/src/app/navigation/navigation.component.html
+++ b/angular-test/src/app/navigation/navigation.component.html
@@ -20,7 +20,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>angular-tour-material</span>
+      <span>angular-test</span>
     </mat-toolbar>
     <!-- Add Content Here -->
   </mat-sidenav-content>
